Html tag H2 with titles attr

--- a/Html/wpage.html
+++ b/Html/wpage.html
@@ -7,5 +7,6 @@
 <body>
 	<h1 title="Heading">welcome to the page</h1>
 	<p title="Paragraph"> This paragraph text has title attribute. Hover mouse here to see the text.</p>
+	<h2 title="Here is H2 tag">This is H2 tag. These Heading tags are more important because Search engines use the headings to index the structure and content of your web pages. </h2>
 </body>
 </html>
