Added display style

--- a/Html/wpage.html
+++ b/Html/wpage.html
@@ -8,5 +8,12 @@
 	<h1 title="Heading">welcome to the page</h1>
 	<p title="Paragraph"> This paragraph text has title attribute. Hover mouse here to see the text.</p>
 	<h2 title="Here is H2 tag">This is H2 tag. These Heading tags are more important because Search engines use the headings to index the structure and content of your web pages. </h2>
+	<hr title="line break">
+	<h3 title="After line break">Text</h3>
+	<p> This text is after horizontal line break tag </p>
+	<hr>
+	<h3>HTML TAG REFERNCES</h3>
+	<h4 style="display: inline-block;"> Heading four: </h4>
+	<p style="display: inline-block;">	A container for all the head elements (title, scripts, styles, meta information, and more)</p>
 </body>
 </html>
