--- a/Html/wpage.html
+++ b/Html/wpage.html
@@ -15,5 +15,11 @@
 	<h3>HTML TAG REFERNCES</h3>
 	<h4 style="display: inline-block;"> Heading four: </h4>
 	<p style="display: inline-block;">	A container for all the head elements (title, scripts, styles, meta information, and more)</p>
+	<br>
+	<p> &ltbr&gt tag is used to put a line break. </p>
+	<pre> &ltpre&gt puts the pre formatted text 
+		it takes line breake	_		_		_		as well as multiple spaces.
+	</pre>
+	
 </body>
 </html>
