--- a/Html/wpagestyle.html
+++ b/Html/wpagestyle.html
@@ -7,5 +7,9 @@
 
 	<h1 title="Beryl Systems" style="color: red;"> Welcome to BS</h1>
 	<p>H1 is Styled with red color.</p>
+	<h1 style="font-family:verdana;">This is a heading</h1>
+	<p style="font-family:courier;">This is a paragraph.</p>
+	<h2>Html text size</h2>
+	<p style="font-size:160%;">This is a paragraph.</p>
 </body>
 </html>
