--- a/Html/wpagestyle.html
+++ b/Html/wpagestyle.html
@@ -11,5 +11,10 @@
 	<p style="font-family:courier;">This is a paragraph.</p>
 	<h2>Html text size</h2>
 	<p style="font-size:160%;">This is a paragraph.</p>
+	<h1 style="text-align:center;">Centered Heading</h1>
+  <p style="text-align:center;">Centered paragraph.</p>
+  <center>
+  	<p>This text is also in center</p>
+  </center>
 </body>
 </html>
