formatting the html various tags

--- a/Html/wpageformatting.html
+++ b/Html/wpageformatting.html
@@ -7,5 +7,13 @@
 
 	<h1> Text with some formatting. </h1>
 	<b> Some bold text.</b>
+	<i> Some italics text.</i>
+	<small>Small text.</small>
+	<strong>Strong text.</strong>
+	<sub>Subscript Text</sub>
+	<sup>Super script Text</sup>
+	<ins>Insert Text</ins>
+	<del>Deletion Text</del>
+	<mark>Marked Text</mark>
 </body>
 </html>
