Abbrevation Quotes are added

--- a/Html/wpagequotation.html
+++ b/Html/wpagequotation.html
@@ -7,5 +7,6 @@
 
 	<q> &ltq&gt is used for quotes. </q>
 	<blockquote> This is a blockquotes</blockquote>
+	<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
 </body>
 </html>
