--- a/Html/wpagequotation.html
+++ b/Html/wpagequotation.html
@@ -8,5 +8,15 @@
 	<q> &ltq&gt is used for quotes. </q>
 	<blockquote> This is a blockquotes</blockquote>
 	<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+	<address> THIS IS AN ADDRESS BLOCK.
+		<br>
+		HNO. XYZ
+		<br>
+		CITY
+		<br>
+		STATE
+		<br>
+		COUNTRY
+	</address>
 </body>
 </html>
