--- a/Html/wpagequotation.html
+++ b/Html/wpagequotation.html
@@ -21,5 +21,15 @@
 		<br>
 		COUNTRY
 	</address>
+	<hr>
+	<p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
+	<hr>
+	<bdo dir="rtl">This text will be written from right to left</bdo>
+	<p>This above text is in bidirectional over-ride tab bdo</p>
+	<hr>
+
+	<!-- multiline
+	comment -->
+	<!-- this all is comment in the page -->	
 </body>
 </html>
