--- a/Html/wpagecolors.html
+++ b/Html/wpagecolors.html
@@ -2,14 +2,18 @@
 <html>
 <body>
 
-<h1 style="background-color:Tomato;">Tomato</h1>
-<h1 style="background-color:Orange;">Orange</h1>
-<h1 style="background-color:DodgerBlue;">DodgerBlue</h1>
-<h1 style="background-color:MediumSeaGreen;">MediumSeaGreen</h1>
-<h1 style="background-color:Gray;">Gray</h1>
-<h1 style="background-color:SlateBlue;">SlateBlue</h1>
-<h1 style="background-color:Violet;">Violet</h1>
-<h1 style="background-color:LightGray;">LightGray</h1>
+	<h1 style="background-color:Tomato;">Tomato</h1>
+	<h1 style="background-color:Orange;">Orange</h1>
+	<h1 style="background-color:DodgerBlue;">DodgerBlue</h1>
+	<h1 style="background-color:MediumSeaGreen;">MediumSeaGreen</h1>
+	<h1 style="background-color:Gray;">Gray</h1>
+	<h1 style="background-color:SlateBlue;">SlateBlue</h1>
+	<h1 style="background-color:Violet;">Violet</h1>
+	<h1 style="background-color:LightGray;">LightGray</h1>
+	<hr>
+	<h1 style="border:2px solid Tomato;">Hello World</h1>
+	<h1 style="border:2px solid DodgerBlue;">Hello World</h1>
+	<h1 style="border:2px solid Violet;">Hello World</h1>
 
 </body>
 </html>
