--- a/Html/wpagecolors.html
+++ b/Html/wpagecolors.html
@@ -14,6 +14,15 @@
 	<h1 style="border:2px solid Tomato;">Hello World</h1>
 	<h1 style="border:2px solid DodgerBlue;">Hello World</h1>
 	<h1 style="border:2px solid Violet;">Hello World</h1>
+	<hr>
+
+	<h1 style="background-color:rgb(255, 99, 71);">rgb_condition</h1>
+	<h1 style="background-color:#ff6347;">Hash_values</h1>
+	<h1 style="background-color:hsl(9, 100%, 64%);">Hsl value</h1>
+
+	<h1 style="background-color:rgba(255, 99, 71, 0.5);">rgb value with opacity</h1>
+	<h1 style="background-color:hsla(9, 100%, 64%, 0.5);">hsl values with opacity</h1>
+
 
 </body>
 </html>
