--- a/Html/wpageimages.html
+++ b/Html/wpageimages.html
@@ -5,6 +5,6 @@
 	<h2>Images on Another Server</h2>
 
 	<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com" style="width:104px;height:142px;">
-	<img src="programming.gif" alt="Computer Man" style="width:48px;height:48px;">
+	<img src="https://www.w3schools.com/html/programming.gif" alt="Computer Man" style="width:48px;height:48px;">
 </body>
 </html>
