--- a/Html/wpageimages.html
+++ b/Html/wpageimages.html
@@ -6,5 +6,15 @@
 
 	<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com" style="width:104px;height:142px;">
 	<img src="https://www.w3schools.com/html/programming.gif" alt="Computer Man" style="width:48px;height:48px;">
+	<p><img src="https://www.w3schools.com/html/smiley.gif" alt="Smiley face" style="float:right;width:42px;height:42px;">
+	The image will float to the right of the text.</p>
+
+	<p><img src="https://www.w3schools.com/html/smiley.gif" alt="Smiley face" style="float:left;width:42px;height:42px;">
+	The image will float to the left of the text.</p>
+	<picture>
+  <source media="(min-width: 650px)" srcset="https://www.w3schools.com/html/img_pink_flowers.jpg">
+  <source media="(min-width: 465px)" srcset="https://www.w3schools.com/html/img_white_flower.jpg">
+  <img src="https://www.w3schools.com/html/img_orange_flowers.jpg" alt="Flowers" style="width:auto;">
+	</picture>
 </body>
 </html>
