--- a/Html/Class.html
+++ b/Html/Class.html
@@ -19,6 +19,11 @@
 	<h2 class="city main">London</h2>
 	<h2 class="city">Paris</h2>
 	<h2 class="city">Tokyo</h2>
+	<h2>Same Class, Different Tag</h2>
+	<p>Even if the two elements do not have the same tag name, they can have the same class name, and get the same styling:</p>
+
+	<h2 class="city">Paris</h2>
+	<p class="city">Paris is the capital of France.</p>
 
 </body>
 </html>
