Text area updated

--- a/Html/forms.html
+++ b/Html/forms.html
@@ -34,16 +34,28 @@
 		<br>
 		Employment:
 		<select>
-			<option>
+			<option value="employed">
 				Employed
 			</option>
-			<option>
+			<option value="unemployed">
 				Unemployed
 			</option>
 		</select>
-
+		<br>
+		<br>
+		Nationality:
+		<select size=3>
+			<option value="indian" selected> Indian </option>
+			<option>Non Indian</option>
+		</select>
+		<br>
+		<br>
 		<input type="submit" value="Submit">
+		<br>
+		<textarea name="message" rows="10" cols="30">The cat was playing in the garden.
+		</textarea>
 	</form>
+
 </center>
 </body>
 </html>
