--- a/Html/forms.html
+++ b/Html/forms.html
@@ -25,11 +25,11 @@
 		<input type="Email" name="email" placeholder="Enter your email here.">
 		<br>
 		<br>
-		Age:
+		Sex:
 		<br>
-		<input type="radio" name="male" value="male"> Male
+		<input type="radio" name="sex" value="male"> Male
 		<br>
-		<input type="radio" name="female"> Female
+		<input type="radio" name="sex" value="female"> Female
 		<br>
 		<br>
 		Employment:
@@ -44,18 +44,18 @@
 		<br>
 		<br>
 		Nationality:
-		<select size=3>
+		<select >
 			<option value="indian" selected> Indian </option>
 			<option>Non Indian</option>
 		</select>
 		<br>
 		<br>
 		<input type="submit" value="Submit">
+		<input type="reset">
 		<br>
 		<textarea name="message" rows="10" cols="30">The cat was playing in the garden.
 		</textarea>
 	</form>
-
 </center>
 </body>
 </html>
