--- a/Html/forms2.html
+++ b/Html/forms2.html
@@ -9,6 +9,22 @@
 	  Select your favorite color:
 	  <input type="color" name="favcolor">
 	</form>
+	<form>
+	  Birthday:
+	  <input type="date" name="bday">
+	</form>
+	<form>
+	  Enter a date before 1980-01-01:
+	  <input type="date" name="bday" max="1979-12-31"><br>
+	  Enter a date after 2000-01-01:
+	  <input type="date" name="bday" min="2000-01-02"><br>
+	</form>
+	<form>
+	  Birthday (date and time):
+	  <input type="datetime-local" name="bdaytime">
+	</form>
+
+
 
 </body>
 </html>
