Added file type in form

--- a/Html/forms2.html
+++ b/Html/forms2.html
@@ -23,7 +23,9 @@
 	  Birthday (date and time):
 	  <input type="datetime-local" name="bdaytime">
 	</form>
-
+	<form>
+  	Select a file: <input type="file" name="myFile">
+	</form>
 
 
 </body>
