--- a/Html/forms2.html
+++ b/Html/forms2.html
@@ -26,7 +26,10 @@
 	<form>
   	Select a file: <input type="file" name="myFile">
 	</form>
-
+	<form>
+  Quantity (between 1 and 5):
+  <input type="number" name="quantity" min="1" max="5">
+	</form>
 
 </body>
 </html>
