Range added in form

--- a/Html/forms2.html
+++ b/Html/forms2.html
@@ -31,5 +31,18 @@
   <input type="number" name="quantity" min="1" max="5">
 	</form>
 
+	
+	<h2>Range Field</h2>
+	<p>Depending on browser support:<br>The input type "range" can be displayed as a slider control.<p>
+
+	<form action="/action_page.php" method="get">
+	  Points:
+	  <input type="range" name="points" min="0" max="10">
+	  <input type="submit">
+	</form>
+
+
+
+
 </body>
 </html>
