Arithmetic subtractions numbers

--- a/Html/Javascript/test2.html
+++ b/Html/Javascript/test2.html
@@ -12,7 +12,8 @@
 	<p>x = 5, y = 2, calculate z = x + y, and display z:</p>
 
 	<p id="demo"></p>
-
+	<p>x = 5, y = 2, calculate z = x - y, and display z:</p>
+	<p id="demo2"></p>
 
 </body>
 	<script type="text/javascript" src="test2.js"></script>
