--- a/Html/Javascript/test2.html
+++ b/Html/Javascript/test2.html
@@ -14,6 +14,8 @@
 	<p id="demo"></p>
 	<p>x = 5, y = 2, calculate z = x - y, and display z:</p>
 	<p id="demo2"></p>
+	<p>x = 5, y = 2, calculate z = x * y, and display z:</p>
+	<p id="multi"></p>
 
 </body>
 	<script type="text/javascript" src="test2.js"></script>
