Listed all events

--- a/Html/Javascript/Events.html
+++ b/Html/Javascript/Events.html
@@ -7,7 +7,27 @@
 
 	<h1>Time is:  </h1>
 	<p><span id="time"></span></p>
-	<button onclick="document.getElementById('time').innerHTML= Date()">Watch date</button>
+	<button onclick="document.getElementById('time').innerHTML= Date()">Watch date by onclick</button>
+	<ul>
+		<li>
+			Onchange
+		</li>
+		<li>
+			onclick
+		</li>
+		<li>
+			onmouseover
+		</li>
+		<li>
+			onmouseout
+		</li>
+		<li>
+			onkeydown
+		</li>
+		<li>
+			onload
+		</li>
+	</ul>
 
 </body>
 </html>
