--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -6,7 +6,8 @@ This is the HTML document that you'll use jQuery to modify. To take the quiz, cl
 -->
 <html lang="en">
 <head>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
 </head>
 <body>
