append and prepend method in jQuery to add elements

--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -59,6 +59,8 @@ This is the HTML document that you'll use jQuery to modify. To take the quiz, cl
             </ul>
         </div>
     </div>
+    <div class="test">
+    </div>
 </body>
 <script src="app.js" charset="utf-8"></script>
 </html>
