Doubleclick event in jquery

--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -13,6 +13,8 @@ This is the HTML document that you'll use jQuery to modify. To take the quiz, cl
 <body>
     <div class="container">
         <header class="header">
+          <h1>Click me to hide. </h1>
+          <h2>Double click me to hide.</h2>
             <nav id="nav" class="navigator">
                 <h1>Nav Header</h1>
                 <ul class="nav-list">
