Focus and Blur event Used

--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -15,6 +15,9 @@ This is the HTML document that you'll use jQuery to modify. To take the quiz, cl
         <header class="header">
           <h1>Click me to hide. </h1>
           <h2>Double click me to hide.</h2>
+
+          Name: <input type="text" name="fullname"><br>
+          Email: <input type="text" name="email">
             <nav id="nav" class="navigator">
                 <h1>Nav Header</h1>
                 <ul class="nav-list">
