Toggle method is Used with delay

--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -60,11 +60,13 @@ This is the HTML document that you'll use jQuery to modify. To take the quiz, cl
                     <header>Article #4</header>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate commodi, est soluta eos voluptates eum! Modi sit quia ipsum fugiat nesciunt, assumenda deleniti consequuntur molestias reprehenderit. Voluptate corporis illum nam?</p>
                     <p>Quia, omnis. Quasi necessitatibus, ducimus, deserunt ipsa, reprehenderit sit a dolore fuga placeat magni culpa ipsam quas id aut veniam rerum pariatur enim harum recusandae quo odio consequuntur. Maxime, aperiam.</p>
+
                 </li>
             </ul>
         </div>
     </div>
     <div class="test">
+      <button type="button" name="button">Hide or show elements</button>
     </div>
 </body>
 <script src="app.js" charset="utf-8"></script>
