Slide Toggle method is Used

--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -11,7 +11,10 @@ This is the HTML document that you'll use jQuery to modify. To take the quiz, cl
     <meta charset="UTF-8">
 </head>
 <body>
+
     <div class="container">
+      <p id='show'>show webpage</p>
+      <div id='panel'>
         <header class="header">
           <h1>Click me to hide. </h1>
           <h2>Double click me to hide.</h2>
@@ -65,6 +68,7 @@ This is the HTML document that you'll use jQuery to modify. To take the quiz, cl
             </ul>
         </div>
     </div>
+  </div>
     <div class="test">
       <button type="button" name="button">Hide or show elements</button>
     </div>
