Jquery html set method

--- a/Jquery/jq.html
+++ b/Jquery/jq.html
@@ -6,9 +6,12 @@
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   </head>
   <body>
-    <p>this is a paragraph with <b>Bold</b> text</p>
+    <p id="place">this is a paragraph with <b>Bold</b> text</p>
     <button id="btn1" type="button" name="button">show html</button>
     <button id="btn2" type="button" name="button">show text</button>
+    <input id="input1" type="text" name="" value="sadasdas">
+    <button id="sub">Submit</button>
+
   </body>
   <script src="jq.js" charset="utf-8"></script>
 </html>
